{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 230,
  "lineage": "64381fc1-b496-2da6-3f04-49b8c02107c3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-032861027dac126f3",
            "public_dns": "ec2-52-55-68-203.compute-1.amazonaws.com",
            "public_ip": "52.55.68.203",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dbserver",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0323c3dd2da7fb37d",
            "arn": "arn:aws:ec2:us-east-1:470535650044:instance/i-052272b1b1a5cf376",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-052272b1b1a5cf376",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "PrivateInstanceKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b62dfd8f9b308d96",
            "private_dns": "ip-10-10-2-113.ec2.internal",
            "private_ip": "10.10.2.113",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0341e2492bb528f47",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-023aa9fc2e158554b",
            "tags": {
              "Name": "dbserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-047e48a5c8c442770"
            ]
          },
          "dependencies": [
            "aws_security_group.dbserver_security_group",
            "aws_subnet.private_subnet",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0323c3dd2da7fb37d",
            "arn": "arn:aws:ec2:us-east-1:470535650044:instance/i-019c5fe66fa7057c8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-019c5fe66fa7057c8",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "PrivateInstanceKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-060fe795708a2c6cb",
            "private_dns": "ip-10-10-1-205.ec2.internal",
            "private_ip": "10.10.1.205",
            "public_dns": "ec2-54-86-66-13.compute-1.amazonaws.com",
            "public_ip": "54.86.66.13",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-066f3bb4e1ed187b8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09960655da85a97dd",
            "tags": {
              "Name": "webserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05bf8791a73b4e65b"
            ]
          },
          "dependencies": [
            "aws_security_group.webserver_security_group",
            "aws_subnet.public_subnet",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0e49a6951a6932a7e",
            "owner_id": "470535650044",
            "tags": {
              "Name": "Internet Gateway"
            },
            "vpc_id": "vpc-00e846742bc2f6fe5"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-032861027dac126f3",
            "id": "nat-05f19e047c7345abb",
            "network_interface_id": "eni-0abf2b45a57a2a0a1",
            "private_ip": "10.10.1.173",
            "public_ip": "52.55.68.203",
            "subnet_id": "subnet-09960655da85a97dd",
            "tags": {
              "Name": "NAT Gateway"
            }
          },
          "dependencies": [
            "aws_eip.default",
            "aws_subnet.public_subnet",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e49a6951a6932a7e",
            "id": "r-rtb-020a43688ce165cc81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-020a43688ce165cc8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.public_route_table",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a3ee95427d44a9d91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-05f19e047c7345abb",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a3ee95427d44a9d9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.default",
            "aws_nat_gateway.default",
            "aws_subnet.public_subnet",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-020a43688ce165cc8",
            "owner_id": "470535650044",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Public Route Table"
            },
            "vpc_id": "vpc-00e846742bc2f6fe5"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0018f2ccda89e1e86",
            "route_table_id": "rtb-020a43688ce165cc8",
            "subnet_id": "subnet-09960655da85a97dd"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dbserver_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470535650044:security-group/sg-047e48a5c8c442770",
            "description": "DB server Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-047e48a5c8c442770",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.1.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.10.1.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "DB server Security Group",
            "name_prefix": null,
            "owner_id": "470535650044",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DB server Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e846742bc2f6fe5"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470535650044:security-group/sg-05bf8791a73b4e65b",
            "description": "Webserver Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05bf8791a73b4e65b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "109.136.74.170/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Webserver Security Group",
            "name_prefix": null,
            "owner_id": "470535650044",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Webserver Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e846742bc2f6fe5"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470535650044:subnet/subnet-023aa9fc2e158554b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.2.0/24",
            "id": "subnet-023aa9fc2e158554b",
            "map_public_ip_on_launch": false,
            "owner_id": "470535650044",
            "tags": {
              "Name": "Private Subnet"
            },
            "vpc_id": "vpc-00e846742bc2f6fe5"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470535650044:subnet/subnet-09960655da85a97dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-09960655da85a97dd",
            "map_public_ip_on_launch": true,
            "owner_id": "470535650044",
            "tags": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-00e846742bc2f6fe5"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470535650044:vpc/vpc-00e846742bc2f6fe5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0091cc61d0ebf056b",
            "default_route_table_id": "rtb-0a3ee95427d44a9d9",
            "default_security_group_id": "sg-0ba443c317e887e8f",
            "dhcp_options_id": "dopt-3c9c5546",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00e846742bc2f6fe5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a3ee95427d44a9d9",
            "owner_id": "470535650044",
            "tags": {
              "Name": "VPC HA Custom"
            }
          }
        }
      ]
    }
  ]
}